--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -250,7 +250,7 @@ em {
         }
     }
 }
-.pull-right {
+.wrap-side-right {
     .fresh-list {
         padding:12px 0;
         .fresh-detail .fresh-text .fresh-info {
