--- a/source/widget/Public.FocusPic/ui-focusPic.less
+++ b/source/widget/Public.FocusPic/ui-focusPic.less
@@ -17,6 +17,11 @@
 					a {
 						display:block;width:100%;height: 380px; 
 					}
+					img {
+						width: auto;
+						margin:auto;
+						max-width:none;
+					}
 				}
 				li.current { z-index: 10;}
 		}
