--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -247,7 +247,7 @@ em {
             font-size: 14px;
             margin-right:15px;
             cursor: pointer;
-            &.current {
+            &.active {
              border-bottom:2px solid #3bafda;
              color: #3bafda;
             }
