金币 收货地址 conmit
金币 收货地址 conmit

--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -85,15 +85,13 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .red-card-add,.present-add{display: inline-block;margin: 0 10px;vertical-align: middle;width: 16px;height: 16px;background-color: #3398cc;border-radius: 18px;position: relative;cursor: pointer;}
 .red-card-exchange{width: 132px;height: 42px;margin-top:60px;background-color: #e74c3c;color: #fff;text-align: center;line-height: 42px;border-radius: 5px;cursor: pointer;position: absolute;bottom: 0}
 .present-exchange{float:right;width: 132px;height: 42px;margin-top:60px;background-color: #e74c3c;color: #fff;text-align: center;line-height: 42px;border-radius: 5px;cursor: pointer;}
-.present-address-box span{display: inline-block;font-size:16px;width: 100%;color: #666;padding-bottom: 16px;border-bottom: 1px solid #eaeaea;}
+.present-address-box span{display: inline-block;font-size:16px;width: 100%;color: #666;padding-bottom: 16px;}
 .present-address-box form{margin-top: 20px;}
 .present-address-box form label{height: 32px;line-height: 32px;color: #999;display: block;}
 .present-address-box form label input{margin: 0 11px 0 3px;}
 .present-address-box form label.present-address-focus{background-color: #ebf7fb;color: #333;}
 .modal-title{color:#666;}
 .modal-body{overflow: hidden;}
-//.modal-dialog{width: 740px;}
-.present-address-box span{font-size: 16px;}
 .red-card-tip div,.present-card-tip div{padding:0;height: 30px;text-align: center;}
 .red-card-tip div span,.present-card-tip div span{height: 30px;line-height: 30px;color: #333;font-weight: bold;}
 
