课程列表已关注更改

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -352,6 +352,10 @@ ul,li{list-style: none;}
 		color: #fff;
 	}
 }
+.course-list .add-attention-btn{
+	background: #ccc;
+	color: #fff;
+}
 .course-list .fresh-add {
 	font-size: 14px;
 	padding-right: 2px;
