--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -28,10 +28,10 @@
         float: left;
         display: inline-block;
         clear: both;
-        margin-left: 100px;
+        margin-left: 110px;
         .hp-recommend{
             .hpr-box{
-                width: 570px;
+                width: 540px;
                 height: 280px;
                 overflow:scroll;
                 overflow-x:hidden;
@@ -40,7 +40,7 @@
                     width: 60px;
                     height: 60px;
                     border-radius: 50%;
-                    margin: 20px;
+                    margin: 18px;
                     cursor: pointer;
                     &:hover{
                         border: 3px solid #3bafda;
@@ -50,8 +50,13 @@
                     }
                 }
             }
+            .hpr-btn{
+                margin-left: 15px;
+            }
         }
         .hp-local{
+            display: none;
+            margin-left: 60px;
             .hl-box{
                 position: relative;
                 width: 400px;
@@ -109,7 +114,6 @@
                 .btn_loadFile{
                     display: none;
                     float: right;
-                    margin-right: 170px;
                 }
             }
             #loadFile{
@@ -125,9 +129,7 @@
             }
         }
         .btn-info{
-            margin-bottom: 20px;
             width: 100px;
-            height: 35px;
             font-size: 14px; 
         }
     }
