--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -230,9 +230,11 @@ em {
             i.fa {
                 cursor: pointer;
                 color: #999;
-                &.fa-circle {
+            }
+             &.active {
+                i.fa {
                     color: #3bafda;
-                }
+                 }
             }
         }
     }
