--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -461,7 +461,9 @@ ul,li{list-style: none;}
 		right: -25px;
 		color: #fff;
 		font-size: 14px;
-		line-height: 24px;
+		line-height: 17px;
+		font-family: 'microsoft yahei';
+		padding-top: 8px;
 	}
 	.label-subject{
 		background: #ffbc3c;
