--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -169,7 +169,7 @@
              }
        }
        a{
-          color:@blue-color;
+          color:@font-color;
           text-decoration:none;
           &:hover{
             text-decoration:underline;
