--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -183,19 +183,20 @@
       }
       .centerHeader-alFocus-btn{
         .btn;
-        cursor: pointer;
+        background-color: #ccc;
         margin-right: 9px;
       }
       .centerHeader-willFocus-btn{
-        &:hover{
-          background: #ccc;
-        }
         cursor: pointer;
         display: inline-block;
         width: 80px;
         height: 33px;
         line-height: 33px;
         font-size: 14px;
+        color:#fff;
+        &:hover{
+          text-decoration: underline;
+        }
       }
     }
   
@@ -212,6 +213,10 @@
 .center-left-m{
   margin-left: 30px;
 }
+.teacher-self-intro{
+  background-color: #fff;
+  border-radius: 2px;
+}
 .center-info{
   .center-left;
   //height: 50px;
@@ -224,10 +229,10 @@
   }
   .center-info-fans{
     .center-info-all;
+    margin-bottom: 8px;
     border-right: 1px solid rgb(217,217,217);
     .center-info-fans-name{
       color:@wordColor;
-      padding-bottom: 8px;
     }
   }
   .center-info-newThing{
@@ -238,10 +243,11 @@
   }
   .center-info-stud{
     .center-info-all;
+    margin-bottom: 8px;
     border-left: 1px solid rgb(217,217,217);
     .center-info-stud-name{
       color:@wordColor;
-      padding-bottom: 8px;
+      
     }
   }
   .center-info-fans-office{
