--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -308,6 +308,8 @@ em {
         // }
    }
    .page-turn-box {
+        float: left;
+        width: 1100px;
         overflow: hidden;
         .course-small-list {
             float: left;
