--- a/source/widget/perfect-information/perfect-information.css
+++ b/source/widget/perfect-information/perfect-information.css
@@ -100,9 +100,10 @@ body {
   background: url("img/setting-infor.jpg") no-repeat center center;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
+  padding-left: 0;
 }
 .setting-infor .infor-title li {
-  width: 50%;
+  width: 49%;
   text-align: center;
   float: left;
   font-size: 16px;
