--- a/source/widget/perfect-information/perfect-information.less
+++ b/source/widget/perfect-information/perfect-information.less
@@ -102,8 +102,9 @@ body{
 		background: url("img/setting-infor.jpg") no-repeat center center;
 		border-top-left-radius: 4px;
 		border-top-right-radius: 4px;
+		padding-left: 0;
 		li{
-			width: 50%;
+			width: 49%;
 			text-align: center;
 			float: left;
 			font-size: 16px;
