修改头部购物车bug

--- a/source/widget/Public.MiniCart/minicart.less
+++ b/source/widget/Public.MiniCart/minicart.less
@@ -21,6 +21,11 @@
         line-height: 20px;
         border-radius: 2px;
         position: relative;
+        a {
+                float: left;
+                padding-left: 15px;
+                color: #666;
+            }
         .fa {
             &.fa-angle-right {
                 margin-top: 4px;
