--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -82,6 +82,11 @@ ul,li{list-style: none;}
 			display: inline-block;
 			width: 60px;
 			overflow: hidden;
+			img{
+				border-radius: 50%;
+				width: 60px;
+				height: 60px;
+			}
 			ul{
 				overflow: hidden;
 				width: 800px;
@@ -375,6 +380,7 @@ ul,li{list-style: none;}
 			img{
 				width: 40px;
 				height: 40px;
+				border-radius: 50%;
 			}
 		}
 	}
