--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -262,6 +262,11 @@ body{
 			.avatar-photo{
 				float: left;
 				margin-right: 10px;
+				img{
+					width: 60px;
+					height: 60px;
+					border-radius: 50%;
+				}
 			}
 			.coach-con{
 				float: left;
