--- a/source/widget/UM.head.photo/head.photo.css
+++ b/source/widget/UM.head.photo/head.photo.css
@@ -27,10 +27,10 @@
   float: left;
   display: inline-block;
   clear: both;
-  margin-left: 100px;
+  margin-left: 110px;
 }
 .hp-content .hp-box-left .hp-recommend .hpr-box {
-  width: 570px;
+  width: 540px;
   height: 280px;
   overflow: scroll;
   overflow-x: hidden;
@@ -40,7 +40,7 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  margin: 20px;
+  margin: 18px;
   cursor: pointer;
 }
 .hp-content .hp-box-left .hp-recommend .hpr-box img:hover {
@@ -48,6 +48,13 @@
   box-shadow: 0px 0px 10px #3bafda;
   -moz-box-shadow: 0px 0px 10px #3bafda;
   -webkit-box-shadow: 0px 0px 10px #3bafda;
+}
+.hp-content .hp-box-left .hp-recommend .hpr-btn {
+  margin-left: 15px;
+}
+.hp-content .hp-box-left .hp-local {
+  display: none;
+  margin-left: 60px;
 }
 .hp-content .hp-box-left .hp-local .hl-box {
   position: relative;
@@ -101,7 +108,6 @@
 .hp-content .hp-box-left .hp-local .btn_up .btn_loadFile {
   display: none;
   float: right;
-  margin-right: 170px;
 }
 .hp-content .hp-box-left .hp-local #loadFile {
   display: none;
@@ -115,9 +121,7 @@
   filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
 }
 .hp-content .hp-box-left .btn-info {
-  margin-bottom: 20px;
   width: 100px;
-  height: 35px;
   font-size: 14px;
 }
 .hp-content .hp-box-right {
@@ -149,6 +153,7 @@
 .hp-content .hp-box-right #hp-big img {
   margin: 30px auto 10px;
   display: block;
+  border-radius: 50%;
 }
 .hp-content .hp-box-right #hp-small img {
   width: 40px;
