--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -156,6 +156,7 @@
             img{
                 margin: 30px auto 10px;
                 display: block;
+                border-radius: 50%;
             }
         }
         #hp-small{
