--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -371,23 +371,28 @@
   }
   .center-visit-person{
     display: inline-block;
-    padding: 15px 14px 10px;
+    padding: 15px 0 10px;
     height: 110px;
-    width: 78px;
+    width: 84px;
     cursor:pointer;
 
     .center-visit-header{
       width: 40px;
       height: 40px;
-      margin: 0 5px;
+      margin: 0 22px;
+      border-radius: 50%;
     }
     .center-visit-name{
       margin-top: 6px;
       text-align: center;
+      height: 18px;
+      line-height: 18px;
+      overflow: hidden;
     }
     .center-visit-time{
       margin-top: 6px;
       color: rgb(153,153,153);
+      text-align: center;
     }
   }
   .blueRed-v:hover{
